--- a/css/ph/phReset.css
+++ b/css/ph/phReset.css
@@ -1,10 +1,14 @@
 /**
    * author: 马新想 (webxiaoma)
  */
-*{
+ *{
     margin: 0;
     padding: 0;
     border: 0;
+ }
+blockquote, body, button, dd, dl, dt, fieldset, form, 
+h1, h2, h3, h4, h5, h6, hr, input, select,option,legend, 
+li, ol, p, pre, td, textarea, th, ul{
     font-size: 100%;
     font-weight: normal;
     vertical-align: baseline;
