--- a/css/ph/phReset.less
+++ b/css/ph/phReset.less
@@ -21,7 +21,7 @@
   padding:@tb/@r @ril/@r;
 }
 .padding(@t,@ri,@b){
-  padding:@t/@ri @ri/@r @b/@r;
+  padding:@t/@r @ri/@r @b/@r;
 }
 .padding(@t,@ri,@b,@l){
   padding:@t/@r @ri/@r @b/@r @l/@r;
