--- a/css/pc/pcReset.css
+++ b/css/pc/pcReset.css
@@ -7,13 +7,15 @@
     padding: 0;
     border: 0;
     box-sizing:border-box;
+    font-family: "Microsoft Yahei","Arial";
 }
 blockquote, body, button, dd, dl, dt, fieldset, form, 
 h1, h2, h3, h4, h5, h6, hr, input, select,option,legend, 
-li, ol, p, pre, td, textarea, th, ul{
+li, ol, p, pre, td, textarea, th, ul,a{
     font-size: 100%;
     font-weight: normal;
     vertical-align: baseline;
+    text-decoration:none;
     list-style: none;
     color:#333;
 }
